--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,6 +5,8 @@
 #CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=n
+# The following line to enable mouse movement
+CONFIG_ZMK_POINTING=y
 
 # Uncomment below for increased Bluetooth range at cost of battery.
 #CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
